# aoc

./: Cargo.toml  do-problem.py
src/: lib.rs  main.rs  y2024.rs
src/2024/01/: main.rs
src/2024/02/: main.rs
src/2024/03/: main.rs
src/2024/04/: main.rs
src/2024/05/: main.rs
src/2024/06/: main.rs
src/2024/07/: main.rs
src/2024/08/: main.rs
src/2024/09/: main.rs
src/2024/10/: main.rs
src/2024/11/: main.rs
src/2024/template/: main.rs
src/template/: main.rs
src/y2023/: p1.rs
